fix the text alignment

--- a/src/app/components/main/main.component.sass
+++ b/src/app/components/main/main.component.sass
@@ -10,3 +10,7 @@
   font-size: 60px
   font-weight: bold
   color: white
+  text-align: center
+  margin: auto
+  max-width: 80%
+  line-height: 70px
